<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConfirmationFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200sp"
        android:layout_height="300sp"
        android:contentDescription="@string/the_bank_icon"
        android:src="@drawable/thebank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVExtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/view_extract"
        android:textColor="@color/white"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmName" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/home"
        android:textColor="@color/white"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnVExtract" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/date"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/confirmTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/send_to"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmAmount"
        app:layout_constraintStart_toStartOf="@+id/confirmAmount"
        app:layout_constraintTop_toBottomOf="@+id/confirmAmount" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amount"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmaDate"
        app:layout_constraintStart_toStartOf="@+id/confirmaDate"
        app:layout_constraintTop_toBottomOf="@+id/confirmaDate" />

    <TextView
        android:id="@+id/confirmaDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_str"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/confirmAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_doub"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/confirmName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_str"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/confirmTransaction"
        app:layout_constraintStart_toStartOf="@+id/confirmTransaction"
        app:layout_constraintTop_toBottomOf="@+id/confirmTransaction" />

</androidx.constraintlayout.widget.ConstraintLayout>