<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SendMoneyFragment">

    <ImageView
        android:id="@+id/bankSend"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/the_bank_icon"
        android:src="@drawable/thebank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSendorRec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/send_money_to"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankSend" />

    <EditText
        android:id="@+id/recipientAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/recipient"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_shadow_start_color"
        android:textColorHint="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSendorRec" />

    <EditText
        android:id="@+id/amountAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="textPersonName"
        android:textColor="@color/cardview_shadow_start_color"
        android:textColorHint="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="@+id/recipientAnswer"
        app:layout_constraintStart_toStartOf="@+id/recipientAnswer"
        app:layout_constraintTop_toBottomOf="@+id/recipientAnswer" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="62dp"
        android:text="@string/send_money"
        android:textColor="@color/white"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountAnswer" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSend" />
</androidx.constraintlayout.widget.ConstraintLayout>