<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WalletFragment">

    <ImageView
        android:id="@+id/imgWallet"
        android:layout_width="130sp"
        android:layout_height="130sp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/the_bank_icon"
        android:src="@drawable/thebank"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/wallet"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgWallet"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnVExtractWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:text="@string/view_extract"
        android:textColor="@color/white"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balanceAmount" />

    <Button
        android:id="@+id/btnHomeWallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/home"
        android:textColor="@color/white"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnVExtractWallet" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/txt_balance"
        android:textColor="@color/first_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWallet" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginLeft="50sp"
        android:text="@string/txt_income"
        android:textColor="@color/first_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50sp"
        android:layout_marginLeft="50sp"
        android:text="@string/txt_spent"
        android:textColor="@color/first_color"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/balanceAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/info_doub"
        android:textColor="@color/cardview_shadow_start_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/incomeAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/info_doub"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/balanceAmount" />

    <TextView
        android:id="@+id/spentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/info_doub"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/incomeAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>