<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recordsEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15sp"
    app:cardElevation="10sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editRecipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/recipient"
            android:textColor="@color/cardview_shadow_start_color"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/info_doub"
            android:textColor="@color/cardview_shadow_start_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/okEdit"
            app:layout_constraintTop_toTopOf="@+id/editRecipient" />

        <EditText
            android:id="@+id/editRemarks"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:text="@string/remarks"
            android:textColor="@color/cardview_shadow_start_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editRecipient"
            app:layout_constraintTop_toBottomOf="@+id/editRecipient" />

        <TextView
            android:id="@+id/editDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/info_str"
            android:textColor="@color/cardview_shadow_start_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/okEdit"
            app:layout_constraintTop_toBottomOf="@+id/editAmount"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/okEdit"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/ok_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ok" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>