<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/theBankIcon"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/the_bank_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/thebank" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textColorLink="@color/black"
        app:backgroundTint="@color/first_color"
        app:cornerRadius="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginRight="15sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:shadowColor="@color/black"
        android:singleLine="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="15sp"
        android:layout_marginRight="15sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:shadowColor="@color/black"
        android:singleLine="false"
        android:textColor="@color/text_color"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theBankIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>